@@ -3,6 +3,8 @@ Version 0.76 (under development)
 
 * IP.__cmp__(other) doesn't raise an exception anymore if other is not an IP
   object
+* Add IP.get_mac() method: get the 802.3 MAC address from IPv6 RFC 2464
+  address.
 
 Version 0.75 (2011-04-12)
 -------------------------
